第八章翻译完毕
顺带修正目录和一些链接

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -78,7 +78,7 @@
   - [永恒的学习内驱力](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E6%B0%B8%E6%81%92%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
   - [5.9Summary: Changes to the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
   - [摘要：改变学习内驱力的因素](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E6%91%98%E8%A6%81%E6%94%B9%E5%8F%98%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%9B%A0%E7%B4%A0)
-- 6Learn drive and reward
+- [6Learn drive and reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_reward)
 - 学习内驱力和奖励
   - [6.1The main problem in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_main_problem_in_education)
   - 教育中的主要问题
@@ -98,7 +98,7 @@
   - 检测意外
   - [6.9The wow factor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_wow_factor)
   - 「哇」因子
-  - 6.10Knowledge valuation network
+  - [6.10Knowledge valuation network](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuation_network)
   - 知识评估网络
     - [6.10.1Knowledge valuations](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuations)
     - 知识评估
@@ -120,7 +120,7 @@
   - 最佳信息传授
   - [6.15Gripping lectures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Gripping_lectures)
   - 令人全神贯注的讲课
-  - 6.16Learning rewards
+  - [6.16Learning rewards](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_rewards)
   - 学习奖励
     - [6.16.1Learn drive reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_reward)
     - 学习内驱力奖励
@@ -132,7 +132,7 @@
     - 陈述性学习奖励
     - [6.16.5Reward centers in learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reward_centers_in_learning)
     - 学习中的奖励中枢
-  - 6.17Biederman model
+  - [6.17Biederman model](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Biederman_model)
   - Biederman 模型
     - [6.17.1Pleasure of reading about the pleasure of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_reading_about_the_pleasure_of_reading)
     - 阅读关于阅读快乐的快乐
@@ -146,7 +146,7 @@
     - 学习内驱力进化的几个阶段
   - [6.18Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)
   - 值得的困难
-  - 6.19Addiction to learning
+  - [6.19Addiction to learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Addiction_to_learning)
   - 学习成瘾
     - [6.19.1Inborn addiction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inborn_addiction)
     - 天生成瘾
@@ -162,7 +162,7 @@
   - 学习的不快
   - [6.21Learning and procrastination](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_procrastination)
   - 学习和拖延
-  - 6.22Learning and depression
+  - [6.22Learning and depression](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_depression)
   - 学习和抑郁
     - [6.22.1Learning at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_at_school)
     - 在校学习
@@ -174,7 +174,7 @@
     - 学习内驱力和乐观
     - [6.22.5Can learning help you?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Can_learning_help_you.3F)
     - 学习可以帮到你吗？
-  - 6.23Optimization of education: Global or Local?
+  - [6.23Optimization of education: Global or Local?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimization_of_education:_Global_or_Local.3F)
   - 教育的优化：全局还是局部？
     - [6.23.1Perfect model of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_model_of_education)
     - 完美的教育模型
@@ -194,32 +194,32 @@
   - 学习的基本规律
   - [6.25Summary: Pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Pleasure_of_learning)
   - 摘要：学习的快乐
-- 7Learn drive vs. learned helplessness
+- [7Learn drive vs. learned helplessness](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learned_helplessness)
 - 学习内驱力与习得性无助
   - [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
   - 学习内驱力随年龄增长而丧失
   - [7.2Neural withering](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_withering)
   - 神经萎缩
   - [7.3Learned helplessness at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_school)
-  - 学校中的习得性无助
+  - 学校里的习得性无助
   - [7.4Kids in a container](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_in_a_container)
-  - 容器里的孩子
+  - 牢笼里的孩子
   - [7.5Learned helplessness at daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_daycare)
-  - 幼儿园中的习得性无助
+  - 幼儿园里的习得性无助
   - [7.6Your brain is great!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Your_brain_is_great.21)
   - 你的大脑很棒！
   - [7.7Summary: School and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_School_and_learn_drive)
   - 摘要：学校和学习内驱力
-- 8Education counteracts evolution
+- [8Education counteracts evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Education_counteracts_evolution)
 - 教育抵消进化
   - [8.1Inefficiency of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inefficiency_of_education)
   - 教育的低效
   - [8.2Exploration algorithm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exploration_algorithm)
   - 探索算法
   - [8.3Evolving imitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolving_imitation)
-  - 不断进化的模仿
+  - 进化的模仿
   - [8.4Imitation vs. novelty seeking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Imitation_vs._novelty_seeking)
-  - 模仿与猎奇
+  - 模仿与新颖寻求
   - [8.5Language, religions, and war](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Language.2C_religions.2C_and_war)
   - 语言，宗教和战争
   - [8.6The advent of mass education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_advent_of_mass_education)
@@ -227,11 +227,11 @@
   - [8.7Coercive immitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Coercive_immitation)
   - 强制的模仿
   - [8.8Resistance to social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Resistance_to_social_pressure)
-  - 抵抗社会压力
+  - 反抗社会压力
   - [8.9Resistance to extrinsic valuation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Resistance_to_extrinsic_valuation)
-  - 抵抗外部评估
+  - 反抗外部评估
   - [8.10Variations of resistance in a population](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Variations_of_resistance_in_a_population)
-  - 人口中的抵抗变化
+  - 群体中的反抗变化
   - [8.11Wieman drafts the future of exploratory learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Wieman_drafts_the_future_of_exploratory_learning)
   - Wieman 起草了探索性学习的未来
   - [8.12Incremental reading is based on exploration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Incremental_reading_is_based_on_exploration)
@@ -241,8 +241,8 @@
   - [8.14Overoptimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Overoptimization)
   - 过度优化
   - [8.15The Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Grand_Education_Reform)
-  - 宏大的教育改革
-- 9Toxic memory
+  - 教育大改革
+- [9Toxic memory](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memory)
 - 毒性记忆
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
   - 讨厌学校
@@ -258,7 +258,7 @@
   - 数学
   - [9.7Alzheimer's disease](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Alzheimer.27s_disease)
   - 老年痴呆症
-  - 9.8Examples
+  - [9.8Examples](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Examples)
   - 例子
     - [9.8.1Fear of fractions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fear_of_fractions)
     - 恐惧分式
@@ -276,7 +276,7 @@
     - 毫无意义的历史
     - [9.8.8Trouble with counting](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Trouble_with_counting)
     - 计算困难
-  - 9.9Toxic memories in SuperMemo
+  - [9.9Toxic memories in SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_SuperMemo)
   - Supermemo 中的毒性记忆
     - [9.9.1SuperMemo leeches](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#SuperMemo_leeches)
     - Supermemo 水蛭
@@ -290,7 +290,7 @@
     - 高级英语中的毒性记忆
     - [9.9.6Toxic memories in incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_incremental_reading)
     - 渐进阅读中的毒性记忆
-- 10Why schools fail?
+- [10Why schools fail?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Why_schools_fail.3F)
 - 为什么学校会失败？
   - [10.1Summary of failure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary_of_failure)
   - 失败摘要
@@ -300,7 +300,7 @@
   - 学校放弃探索
   - [10.4Schools hinder discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_hinder_discovery)
   - 学校阻碍发现
-- 11Optimum push zone
+- [11Optimum push zone](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_push_zone)
 - 最佳推动区
   - [11.1Push zone at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_at_school)
   - 学校中的推动区
@@ -330,13 +330,13 @@
   - 最小化的压力，最大化的成果
   - [11.14My own story](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_story)
   - 我自己的故事
-- 12Natural creativity cycle
+- [12Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Natural_creativity_cycle)
 - 自然创造力周期
   - [12.1Creativity formula](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creativity_formula)
   - 创造力公式
-  - 12.2Natural creativity cycle
+  - [12.2Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Natural_creativity_cycle_2)
   - 自然创造力周期
-    - 12.2.1Day
+    - [12.2.1Day](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Day)
     - 白天
       - [12.2.1.1Waking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Waking)
       - 醒来
@@ -346,7 +346,7 @@
       - 注意力和创造力循环
       - [12.2.1.4Siesta bonus](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Siesta_bonus)
       - 午睡奖励
-    - 12.2.2Sleep
+    - [12.2.2Sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Sleep)
     - 睡眠
       - [12.2.2.1NREM sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#NREM_sleep)
       - NREM 睡眠
@@ -354,7 +354,7 @@
       - REM 睡眠
       - [12.2.2.3Nighttime inventions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Nighttime_inventions)
       - 夜间发明
-  - 12.3Neural aspects of the creativity cycle
+  - [12.3Neural aspects of the creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_aspects_of_the_creativity_cycle)
   - 创造力周期的神经方面
     - [12.3.1Waking Day](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Waking_Day)
     - 醒来后白天
@@ -371,8 +371,8 @@
   - [12.7Employing the creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_the_creativity_cycle)
   - 利用创造力周期
   - [12.8Old school: creativity cycles](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Old_school:_creativity_cycles)
-  - 老一套：创造力周期
-  - 12.9Tools
+  - 传统学校：创造力周期
+  - [12.9Tools](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Tools)
   - 工具
     - [12.9.1Learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning)
     - 学习
@@ -382,7 +382,7 @@
     - 睡眠图表
   - [12.10Summary: Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Natural_creativity_cycle)
   - 摘要：自然创造力周期
-- 13Brain evolution
+- [13Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_evolution)
 - 脑进化
   - [13.1Employing evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_evolution)
   - 利用进化
@@ -394,7 +394,7 @@
   - 优生学
   - [13.5Summary: Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Brain_evolution)
   - 摘要：脑进化
-- 14Baby management
+- [14Baby management](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Baby_management)
 - 婴儿管理
   - [14.1Rich learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Rich_learning)
   - 丰富学习
@@ -411,7 +411,7 @@
   - [14.7Summary: Baby management](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Baby_management)
   - 摘要：婴儿管理
 - 15How baby brain does not work
-- 婴儿的大脑怎样不起作用
+- [婴儿的大脑怎样不起作用](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#How_baby_brain_does_not_work)
   - [15.1Accelerating development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Accelerating_development)
   - 加快发展
   - [15.2Perfect forgetting machines](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_forgetting_machines)
@@ -430,17 +430,17 @@
   - 尼日利亚统治世界！
   - [15.9Summary: baby brain problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_baby_brain_problems)
   - 摘要：婴儿大脑的问题
-- 16Childhood amnesia
+- [16Childhood amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_amnesia)
 - 童年健忘症
   - [16.1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction_2)
   - 介绍
-  - 16.2Measuring amnesia
+  - [16.2Measuring amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Measuring_amnesia)
   - 测量健忘症
     - [16.2.1Methodology problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Methodology_problems)
     - 方法论问题
     - [16.2.2Forming first memories](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Forming_first_memories)
     - 形成第一次记忆
-  - 16.3Neurogenesis hypothesis
+  - [16.3Neurogenesis hypothesis](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neurogenesis_hypothesis)
   - 神经发生假说
     - [16.3.1Observing a child](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Observing_a_child)
     - 观察一个儿童
@@ -468,13 +468,13 @@
   - 给父母的结论
   - [16.11Summary: Childhood amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_amnesia)
   - 摘要：童年健忘症
-- 17Daycare misery
+- [17Daycare misery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Daycare_misery)
 - 幼儿园的苦难
   - [17.1Benefits of daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Benefits_of_daycare)
   - 幼儿园的好处
   - [17.2Social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Social_pressure)
   - 社会压力
-  - 17.3Problem of daycare
+  - [17.3Problem of daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Problem_of_daycare)
   - 幼儿园的问题
     - [17.3.1Problem 1: Sleep hygiene](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Problem_1:_Sleep_hygiene)
     - 问题一：睡眠健康
@@ -490,7 +490,7 @@
   - 女权主义的观点
   - [17.7Summary: Daycare misery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Daycare_misery)
   - 摘要：幼儿园的苦难
-- 18Stress resilience
+- [18Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience)
 - 压力恢复力
   - [18.1Good stress and bad stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Good_stress_and_bad_stress)
   - 良性压力和恶性压力
@@ -500,7 +500,7 @@
   - 抵抗慢性压力
   - [18.4Adaptation to stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Adaptation_to_stress)
   - 适应压力
-  - 18.5Preparation for adulthood
+  - [18.5Preparation for adulthood](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Preparation_for_adulthood)
   - 成年的准备
     - [18.5.1Stress resilience training](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_training)
     - 压力恢复力训练
@@ -514,7 +514,7 @@
   - 压力恢复力
   - [18.9Summary: Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Stress_resilience)
   - 摘要：压力恢复力
-- 19Childhood passions
+- [19Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions)
 - 童年激情
   - [19.1Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions_2)
   - 童年激情
@@ -530,7 +530,7 @@
   - 上学很轻易地扼杀激情
   - [19.7Summary: Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_passions)
   - 摘要：童年激情
-- 20Why kids hate school?
+- [20Why kids hate school?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Why_kids_hate_school.3F)
 - 为什么孩子们讨厌学校？
   - [20.1Experts confirm: kids don't like school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Experts_confirm:_kids_don.27t_like_school)
   - 专家证实：孩子们不喜欢学校
@@ -539,20 +539,20 @@
   - [20.3Top 11: What kids hate most about school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Top_11:_What_kids_hate_most_about_school)
   - 孩子们讨厌学校最重要的 11 个原因
   - 20.4Why kids like school?
-  - 为什么孩子们喜欢学校
+  - [为什么孩子们喜欢学校](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Why_kids_like_school.3F)
     - [20.4.1Freddy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Freddy)
     - Freddy
     - [20.4.2Arian](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Arian)
     - Arian
   - [20.5Summary: Why kids hate school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Why_kids_hate_school)
   - 摘要：为什么孩子们讨厌学校
-- 21Mountain climb metaphor
+- [21Mountain climb metaphor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Mountain_climb_metaphor)
 - 爬山类比
   - [21.1Education is a mountain to climb](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Education_is_a_mountain_to_climb)
   - 教育是一座可以攀登的山峰
   - [21.2Hindsight is not 20/20](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hindsight_is_not_20.2F20)
   - 后见之明不是完美的
-  - 21.3Mountain climb example
+  - [21.3Mountain climb example](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Mountain_climb_example)
   - 登山的例子
     - [21.3.1Cultivating childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Cultivating_childhood_passions)
     - 培养童年激情
