--- a/I would never send my kids to school我再也不会把孩子送去学校/01.Introduction前言.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/01.Introduction前言.md
@@ -34,6 +34,8 @@ I have spent over two decades in the school system, three decades working in the
 
 ## 基于大脑的改革
 
+Employing the principles of neuroscience, this [book](https://supermemo.guru/wiki/Problem_of_Schooling) explains from grounds up how learning occurs, how it can be made dramatically more effective, how schools counteract effective learning, and how this can be remedied with a universal school [reform](https://supermemo.guru/wiki/Reform).
+
 [本书](https://supermemo.guru/wiki/Problem_of_Schooling)运用神经科学的原理，从基础上解释了学习是如何发生的，如何能显著提高学习效率，学校如何阻碍有效学习，以及如何通过全面的学校[改革](https://supermemo.guru/wiki/Reform)来补救。
 
 ## 1.4 Love for children
@@ -146,11 +148,11 @@ We can track a golden nugget of knowledge from its source to a big discovery. Fr
 
 ## 1.12 Grand Education Reform
 
-## 宏大的教育改革
+## 教育大改革
 
 Once we free our own kids to do [free learning](https://supermemo.guru/wiki/Free_learning) we need to free the entire education system. Let all types of schools and ideas thrive (see: [Grand Education Reform](https://supermemo.guru/wiki/Reform)). The incremental and evolutionary school reform process should proceed with an important goal in mind: all brains on the planet should be set free to pursue [free learning](https://supermemo.guru/wiki/Free_learning). After that, barring disaster, only the age of the machines can change the direction of mankind.
 
-一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展（参见：[宏大的教育改革](https://supermemo.guru/wiki/Reform)）。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
+一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展（参见：[教育大改革](https://supermemo.guru/wiki/Reform)）。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
 
 ## 1.13 When school is a blessing
 
