--- a/I would never send my kids to school我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
@@ -28,7 +28,7 @@ I purposefully avoid the term curiosity, which is often used in psychology. With
 
 Terms such as curiosity, novelty seeking, boredom susceptibility, openness to experience, need of cognition, and intellectual engagement are often used in various contexts to imply the existence of the learn drive. They are either misleading or mean different things. They all carry a baggage that may obscure the picture. This includes decades of disagreements in science, popular use, [inappropriate connotations](https://supermemo.guru/wiki/Curiosity_has_bad_connotations), and more.
 
-好奇心（curiosity）、猎奇（novelty seeking）、无聊易感性（boredom susceptibility）、经验开放性（openness to experience）、认知需求（need of cognition）和智力投入（intellectual engagement）等术语经常被用于不同的上下文中，以暗示学习内驱力的存在。它们要么是误导，要么意味着不同的东西。他们都有一个包袱，可能会使这个概念模糊不清。这包括几十年来在科学、流行用法、不恰当内涵等方面的分歧。
+好奇心（curiosity）、新颖寻求（novelty seeking）、无聊易感性（boredom susceptibility）、经验开放性（openness to experience）、认知需求（need of cognition）和智力投入（intellectual engagement）等术语经常被用于不同的上下文中，以暗示学习内驱力的存在。它们要么是误导，要么意味着不同的东西。他们都有一个包袱，可能会使这个概念模糊不清。这包括几十年来在科学、流行用法、不恰当内涵等方面的分歧。
 
 Conditions needed to delineate the learn drive:
 
@@ -78,7 +78,7 @@ The term **curiosity** could be used instead of the learn drive. It has a precis
 
 **Novelty seeking** is a concept widely used in psychology and behavioral science. It is often confused with curiosity. However, its right place is with the trait theory. Novelty seeking correlates with impulsivity and thrill or sensation seeking. It is then seen as a trait that may lead to behavioral problems. In contrast, the learn drive is the purest of human needs that makes us inventors and discoverers. Novelty seeking is part of [Cloninger's model of personality](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory). In some personality tests it is part of extroversion. It is hereditary, associated with dopamine receptors, and it might send you on a trip to Mt Everest. It might be associated with drug abuse. Mixed reports on correlation with [D4 receptor](https://en.wikipedia.org/wiki/Dopamine_receptor_D4) gene have been interpreted as lack of consensus between psychologists on what novelty seeking actually is. The learn drive is universal, it is innate, but it is also highly dependent on the status of memory, i.e. it is shaped by experience.
 
-**猎奇**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。猎奇与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。猎奇是[ Cloninger 人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对猎奇究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
+**新颖寻求**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。新颖寻求与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。新颖寻求是[ Cloninger 人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对新颖寻求究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
 
 ## 4.3 Novelty and stress
 
