第21章翻译完毕
顺便更正图片备注文字的格式

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -549,11 +549,11 @@
 - [21Mountain climb metaphor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Mountain_climb_metaphor)
 - 爬山类比
   - [21.1Education is a mountain to climb](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Education_is_a_mountain_to_climb)
-  - 教育是一座可以攀登的山峰
+  - 教育是一座待攀登的山峰
   - [21.2Hindsight is not 20/20](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hindsight_is_not_20.2F20)
   - 后见之明不是完美的
   - [21.3Mountain climb example](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Mountain_climb_example)
-  - 登山的例子
+  - 爬山的例子
     - [21.3.1Cultivating childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Cultivating_childhood_passions)
     - 培养童年激情
     - [21.3.2Replicating passions at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Replicating_passions_at_school)
