--- a/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
@@ -51,7 +51,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning) - law stating that efficient learning is always pleasurable
 - [学习的基本规律](https://supermemo.guru/wiki/Fundamental_law_of_learning)——规律表明有效的学习总是令人愉快的
 - [Generalization](https://supermemo.guru/wiki/Generalization) - process in which details are forgotten for the big picture to emerge
-- [概括](https://supermemo.guru/wiki/Generalization)——为了让大局浮现而忘记细节的过程。
+- [泛化](https://supermemo.guru/wiki/Generalization)——为了让整体图景浮现而忘记细节的过程。
 - [Homeostatic sleep propensity](https://supermemo.guru/wiki/Homeostatic_sleep_propensity) - fatigue caused by *tiredness of waking*
 - [稳态睡眠倾向](https://supermemo.guru/wiki/Homeostatic_sleep_propensity)——因*醒着的时候的疲劳*而引起的睡意
 - [Homeschooling](https://supermemo.guru/wiki/Homeschooling) - home-based education
@@ -67,11 +67,11 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Incremental video](https://supermemo.guru/wiki/Incremental_video) - method of massive learning and review of lectures (e.g. from YouTube)
 - [渐进视频](https://supermemo.guru/wiki/Incremental_video)——大规模学习和复习讲座的方法（例如来自 YouTube ）
 - [Interference](https://supermemo.guru/wiki/Interference) - forgetting induced by new learning
-- [干扰](https://supermemo.guru/wiki/Interference)——学习知识导致的遗忘
+- [干扰](https://supermemo.guru/wiki/Interference)——学习新知识导致的遗忘
 - [Learn drive](https://supermemo.guru/wiki/Learn_drive) - natural curiosity that drives learning
 - [学习内驱力](https://supermemo.guru/wiki/Learn_drive)——推动学习的天生好奇心
 - [Learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) - loss of drives in conditions of loss of control
-- [习得性无助](https://supermemo.guru/wiki/Learned_helplessness)——在失去控制的情况下失去内驱力
+- [习得性无助](https://supermemo.guru/wiki/Learned_helplessness)——在失控情况下失去内驱力
 - [Learntropy](https://supermemo.guru/wiki/Learntropy) - measure of attractiveness of a lecture, book, etc.
 - [学习熵](https://supermemo.guru/wiki/Learntropy)——演讲、书籍等学习材料的吸引力的度量
 - [Knowledge darwinism](https://supermemo.guru/wiki/Knowledge_darwinism) - competition of memories for the best place in the [jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle) of memory
@@ -79,15 +79,15 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Knowledge redundancy](https://supermemo.guru/wiki/Knowledge_redundancy) - memorizing same memories in different contexts to boost [recall](https://supermemo.guru/wiki/Recall)
 - [知识冗余](https://supermemo.guru/wiki/Knowledge_redundancy)——在不同的情境中记忆相同的记忆，以促进[回忆](https://supermemo.guru/wiki/Recall)
 - [Knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network) - any neural subsystem capable of estimating the value of knowledge
-- [知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)——任何能够估计知识价值的神经子系统
+- [知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)——任何能够评估知识价值的神经子系统
 - [Memory complexity](https://supermemo.guru/wiki/Memory_complexity) - complexity of memory that determines how difficult it is to retain it
 - [记忆复杂度](https://supermemo.guru/wiki/Memory_complexity)——记忆的复杂性，决定了要记住这段记忆的困难程度
 - [Memory optimization](https://supermemo.guru/wiki/Memory_optimization_in_sleep) - process in which memories get better organized in sleep
 - [记忆优化](https://supermemo.guru/wiki/Memory_optimization_in_sleep)——记忆在睡眠中得到更好的组织的过程
 - [Minimum information principle](https://supermemo.guru/wiki/Minimum_information_principle) - claim that simple memories are easy to retain for longer
-- [最小信息原理](https://supermemo.guru/wiki/Minimum_information_principle)——声称简单的记忆容易保留更长的时间
+- [最小信息原理](https://supermemo.guru/wiki/Minimum_information_principle)——简单的记忆容易保留更长时间的声明
 - [Natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) - undisturbed sleep-wake cycle that maximizes creativity
-- [自然的创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)——不受干扰的最大限度地发挥创造力的睡眠-清醒周期
+- [自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)——不受干扰的最大限度地发挥创造力的睡眠-醒来周期
 - [Passive review](https://supermemo.guru/wiki/Passive_review) - undemanding processing of knowledge (e.g. reading as opposed to [active recall](https://supermemo.guru/wiki/Active_recall))
 - [被动复习](https://supermemo.guru/wiki/Passive_review)——对知识的简单加工（例如阅读而不是[主动回忆](https://supermemo.guru/wiki/Active_recall)）
 - [Pattern completion](https://supermemo.guru/wiki/Pattern_completion) - ability of a neural network to recognize incomplete input (e.g. a blurry picture)
@@ -95,9 +95,9 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Permastore](https://supermemo.guru/wiki/Permastore) - everlasting memory
 - [永久记忆](https://supermemo.guru/wiki/Permastore)——永久的记忆
 - [Polyphasic sleep](https://supermemo.guru/wiki/Polyphasic_sleep) - unhealthy sleep practice in which sleep is dispersed in many small blocks throughout the day
-- [多相睡眠](https://supermemo.guru/wiki/Polyphasic_sleep)——不健康的睡眠实践，其中睡眠在一天中分散在许多小块
+- [多相睡眠](https://supermemo.guru/wiki/Polyphasic_sleep)——不健康的睡眠实践，睡眠在一天中分散为许多短时段
 - [Problem valuation network](https://supermemo.guru/wiki/Problem_valuation_network) - any neural subsystem capable of estimating the expected reward in problem solving
-- [问题评估网络](https://supermemo.guru/wiki/Problem_valuation_network)——任何能够估计问题解决过程中预期奖励的神经子系统。
+- [问题评估网络](https://supermemo.guru/wiki/Problem_valuation_network)——任何能够评估问题解决过程中预期奖励的神经子系统。
 - [Push zone](https://supermemo.guru/wiki/Push_zone) - range of external pressure that may improve learning outcomes
 - [推动区](https://supermemo.guru/wiki/Push_zone)——可能改善学习效果的外部压力范围
 - [Priority queue](https://supermemo.guru/wiki/Priority_queue) - sequence of pieces of knowledge sorted by priority
@@ -133,7 +133,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) - model of memory based on [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) of memories
 - [长期记忆的双组件模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)——基于记忆[可提取性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)的记忆模型
 - [Two-process model of sleep regulation](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation) - model that explains why and when we fall asleep
-- [睡眠调节的双过程模型](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation)——解释我们为什么和何时进入睡眠状态的模型
+- [睡眠调节的双过程模型](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation)——解释我们为什么以及何时进入睡眠状态的模型
 - [Unschooling](https://supermemo.guru/wiki/Unschooling) - learning without the pressure of the curriculum
 - [非学校教育](https://supermemo.guru/wiki/Unschooling)——没有课程压力的学习
 - [Variable reward](https://supermemo.guru/wiki/Variable_reward) - intermittent reward that underlies gambling
